========================================================================================================================
version=1.0.9（2014-09-12）
1、优化了NumRadioButton使其定制更加的灵活
2、加上UnreadBitmapProcessor类，可以处理给图片加上未读消息
========================================================================================================================
version=1.1.0（2014-09-30）
1、添加了RoundedImageView圆角图标控件
========================================================================================================================
version=1.1.1（2014-10-27）
1、添加了photoview模块支持图片缩放控件
========================================================================================================================
version=1.1.2（2014-11-24）
1、photoview中添加app模块，方便用户查看多张大图封装
2、添加pullrefresh模块，比较好的下拉刷新，可支持多种控件的下拉刷新
3、添加模块album提供快捷的相册选择
========================================================================================================================
version=1.1.3（2014-11-26）
1、修改NumRadioButton控件，使其支持只绘制背景而不绘制数字提醒
========================================================================================================================
version=1.1.4（2014-12-15）（依赖bigapple1.3.5）
1、JDK7中TimSort排序算法的Comparator写法比较严格，进行了标准修改写法（2014-12-08）
2、添加fileexplorer，文件选择器，可以选择手机中的文件（2014-12-12）
3、album添加自定义主题功能，这样不用项目来调用可以设当的定制已符合项目需要（2014-12-12）
========================================================================================================================
version=1.1.5（2014-12-17）（依赖bigapple1.3.5）
1、添加RotationImageView支持可旋转图片的控件，基于ImageView的（2014-12-16）
2、添加SwTabHost控件，实现切换tab（2014-12-17）
3、对album进行了代码优化和调整，对使用不受到影响（2014-12-23）
========================================================================================================================
version=1.1.6（2015-01-20）（依赖bigapple1.3.5）
1、添加DragGridView控件，基于GridView的，可使GridView的item进行拖动（2015-01-20）
========================================================================================================================