@@ -68,3 +68,6 @@ version=1.1.5（2014-12-17）（依赖bigapple1.3.5）
 version=1.1.6（2015-01-20）（依赖bigapple1.3.5）
 1、添加DragGridView控件，基于GridView的，可使GridView的item进行拖动（2015-01-20）
 ========================================================================================================================
+version=1.1.7（...）（依赖bigapple1.3.5）
+1、修复ViewPage的一个BUG：初始化不是选中第0个，导致只有一个界面时初始化后会出现两屏界面（2015-03-30）
+========================================================================================================================
